manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: csv-parser
  name: csv-parser
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: csv-parser
  template:
    metadata:
      labels:
        app: csv-parser
    spec:
      containers:
        - image: myrkri/study_csvparser:1.7
          imagePullPolicy: IfNotPresent
          name: study-csvparser-1
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: docker-reg1
