manifests/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csv-kafka-service
  labels:
    app: csv-parser
spec:
  selector:
    app: csv-parser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
