manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csv-parser-ingress
spec:
  rules:
    - host: csv-kafka.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csv-kafka-service
                port:
                  number: 80
